# serial-monitoring

./: .clangd  .clangd-format  .gitignore  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  compile_commands.json  config.json  main.cpp  serial_build.bazel
.devcontainer/: Dockerfile  devcontainer.json
devices/: BUILD.bazel  d1.hpp  d2.hpp  device.hpp
examples/: gui.cpp  main.cpp
include/: device.hpp  logger.hpp  queue.hpp  realtime_spectrogram_widget.hpp
src/: BUILD.bazel  config.cpp  config.hpp  main.cpp  process_thread.hpp  serial_thread.hpp  virtual_device.cpp
src/examples/: BUILD.bazel  connection.cpp  serial_to_csv.cpp
src/lib/: BUILD
