module(
    name = "serial_monitoring",
    version = "0.1",
)

#
bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "bzlws", version = "0.2.0")

# bazel-compile-commands
# $ bazel build @bazel-compile-commands//bcc:bazel-compile-commands
# bazel-bin/external/bazel-compile-commands/bcc/bazel-compile-commands
bazel_dep(name = "bazel-compile-commands", version = "0.0.0")
git_override(
    module_name = "bazel-compile-commands",
    remote = "https://github.com/kiron1/bazel-compile-commands.git",
    tag = "v0.20.0",
)

# bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
# git_override(
#     module_name = "hedron_compile_commands", # 재정의할 모듈 이름
#     commit = "4f28899228fb3ad0126897876f147ca15026151e", # 사용할 특정 Git 커밋 해시
#     remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git", # 모듈을 가져올 Git 저장소 URL
# )

# bazel_dep(name = "toolchains_llvm", version = "1.5.0", dev_dependency = True)
# llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
# llvm.toolchain(llvm_version = "19.1.0")
# use_repo(llvm, "llvm_toolchain")
# register_toolchains("@llvm_toolchain//:all", dev_dependency = True)

# dependencies for the development. (https://registry.bazel.build/)
# bazel_dep(name = "boost.asio", version = "1.89.0")
bazel_dep(name = "boost.asio", version = "1.87.0")

# git_repo_rule = use_repo_rule(
#     "@bazel_tools//tools/build_defs/repo:git.bzl",
#     "git_repository",
# )

# git_repo_rule(
#     name = "nlohmann_json",
#     remote = "https://github.com/nlohmann/json",
#     tag = "v3.12.0",
#     build_file_content =
# """
# package(default_visibility = ["//visibility:public"])
# cc_library(
#     name = "json",
#     hdrs = glob(["single_include/nlohmann/json.hpp"]),
#     includes = ["single_include"],
# )
# """,
# )


# git_repo_rule(
#     name = "boost",
#     remote = "https://github.com/boostorg/asio",
#     tag = "boost-1.89.0",
#     build_file_content =
# """
# cc_library(
#     name = "asio",
#     srcs = glob(["include/**"]),
#     includes = ["include/"],
#     hdrs = glob(["include/**"]),
#     visibility = ["//visibility:public"],
# )
# """,
# )

# git_repo_rule(
#     name = "serial",
#     remote = "https://github.com/wjwwood/serial",
#     tag = "1.2.1",
#     build_file_content =
# """
# cc_library(
#     name = "serial",
#     srcs = glob(["src/**"]), 
#     hdrs = glob(["include/**"]),
#     visibility = ["//visibility:public"],
# )
# """,
# )


# Eigen을 외부 모듈로 추가

# http_archive = use_repo_rule(
#     "@bazel_tools//tools/build_defs/repo:http.bzl", 
#     "http_archive")

# http_archive(
#     name = "eigen",
#     urls = ["https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz"],
#     strip_prefix = "eigen-3.4.0",
#     build_file_content = 
# """
# package(default_visibility = ["//visibility:public"])

# cc_library(
#     name = "eigen",
#     hdrs = glob(["Eigen/**", "unsupported/**"]),
#     includes = ["."],
# )
# """,
# )

# http_archive(
#     name = "nlohmann_json",
#     urls = ["https://github.com/nlohmann/json/archive/refs/tags/v3.11.2.tar.gz"],
#     strip_prefix = "json-3.11.2",
#     build_file_content = 
# """
# package(default_visibility = ["//visibility:public"])

# cc_library(
#     name = "json",
#     hdrs = glob(["single_include/nlohmann/json.hpp"]),
#     includes = ["single_include"],
# )
# """,
# )
