package(default_visibility = ["//src:__pkg__"])

cc_library(
    name = "device_interface",
    hdrs = ["device.hpp"],
)

cc_library(
    name = "device1",
    # srcs = ["d1.cpp"],
    hdrs = ["d1.hpp"],
    deps = [
        ":device_interface"
    ],
)

cc_library(
    name = "device2",
    # srcs = ["d1.cpp"],
    hdrs = ["d2.hpp"],
    deps = [
        ":device_interface"
    ],
)
