cc_library(
    name = "serial_thread",
    hdrs = [
        "serial_thread.hpp",
        "queue.hpp"
        ],
    deps = [
        "//devices:device",
        "@boost.asio",
        ]
)

cc_library(
    name = "process_thread",
    hdrs = [
        "process_thread.hpp",
        "queue.hpp"
        ],
    deps = [
        "//devices:device"
    ]
)

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
        "queue.hpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        ":serial_thread",
        ":process_thread",
        # "@boost.asio",
    ]
)
